conclusion: Fix typo
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/conclusion.lyx
+++ b/conclusion.lyx
@@ -284,7 +284,7 @@ emente en la precisión y el desempeño de S-PTAM Denso.
 \end_layout
 
 \begin_layout Standard
-Los experimentos realizados en este trabajo puede extenderse a numerosos
+Los experimentos realizados en este trabajo pueden extenderse a numerosos
  datasets que se encuentran disponibles públicamente dentro de la comunidad
  robótica.
  Un análisis de la reconstrucción obtenida en diversos escenarios permitiría
