--- a/solucion.lyx
+++ b/solucion.lyx
@@ -1028,8 +1028,28 @@ Siendo
 \begin_layout Standard
 \begin_inset Formula 
 \[
+\frac{1}{\inverseDepth_{1}^{\camera_{1}}}\ray_{1}^{\camera_{1}}=\translation_{\camera_{1}\camera_{2}}+\rotation_{\camera_{1}\camera_{2}}\frac{1}{\inverseDepth_{1}^{\camera_{2}}}\ray_{1}^{\camera_{2}}.
+\]
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
+\begin_inset Formula 
+\[
 \frac{1}{\inverseDepth_{1}^{\camera_{1}}}=\translation_{\camera_{1}\camera_{2}}+\rotation_{\camera_{1}\camera_{2}}\frac{1}{\inverseDepth_{1}^{\camera_{2}}}\ray_{1}^{\camera_{2}}.
 \]
+
+\end_inset
+
+
+\end_layout
 
 \end_inset
 
@@ -1053,10 +1073,34 @@ keyframes
 \end_layout
 
 \begin_layout Standard
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
 \begin_inset Formula 
 \[
 \inverseDepth_{1}^{\camera_{2}}=\norm{\frac{1}{\frac{1}{\inverseDepth_{1}^{\camera_{1}}}}\rotation_{\camera_{1}\camera_{2}}\ray_{1}^{\camera_{1}}-\translation_{\camera_{1}\camera_{2}}}\approx\inverseDepth_{1}^{\camera_{1}}.
 \]
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula 
+\begin{align*}
+\frac{1}{\inverseDepth_{1}^{\camera_{1}}}\ray_{1}^{\camera_{1}} & =\translation_{\camera_{1}\camera_{2}}+\rotation_{\camera_{1}\camera_{2}}\frac{1}{\inverseDepth_{1}^{\camera_{2}}}\ray_{1}^{\camera_{2}}\\
+\frac{1}{\inverseDepth_{1}^{\camera_{1}}}\ray_{1}^{\camera_{1}}-\translation_{\camera_{1}\camera_{2}} & =\rotation_{\camera_{1}\camera_{2}}\frac{1}{\inverseDepth_{1}^{\camera_{2}}}\ray_{1}^{\camera_{2}}\\
+\rotation_{\camera_{2}\camera_{1}}\left(\frac{1}{\inverseDepth_{1}^{\camera_{1}}}\ray_{1}^{\camera_{1}}-\translation_{\camera_{1}\camera_{2}}\right) & =\frac{1}{\inverseDepth_{1}^{\camera_{2}}}\ray_{1}^{\camera_{2}}\\
+\inverseDepth_{1}^{\camera_{2}} & =\left(\rotation_{\camera_{2}\camera_{1}}\left(\frac{1}{\inverseDepth_{1}^{\camera_{1}}}\ray_{1}^{\camera_{1}}-\translation_{\camera_{1}\camera_{2}}\right)\right)^{-1}\ray_{1}^{\camera_{2}}\\
+\inverseDepth_{1}^{\camera_{2}} & =\left(\frac{1}{\inverseDepth_{1}^{\camera_{1}}}\ray_{1}^{\camera_{1}}-\translation_{\camera_{1}\camera_{2}}\right)^{+}\rotation_{\camera_{1}\camera_{2}}\ray_{1}^{\camera_{2}}
+\end{align*}
 
 \end_inset
 
@@ -1091,7 +1135,7 @@ Finalmente, este hilo expande el mapa utilizando los restantes píxeles que
 placement tbh
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \align center
