--- a/conclusion.lyx
+++ b/conclusion.lyx
@@ -104,8 +104,7 @@ keyframes
 .
  El método es denominado S-PTAM Denso debido a que la implementación se
  realizó para ser ejecutada conjuntamente y de manera desacoplada con el
- sistema de SLAM estéreo S-PTAM (por las siglás en inglés de Stereo Parallel
- Tracking and Mapping) 
+ sistema de SLAM estéreo S-PTAM 
 \begin_inset CommandInset citation
 LatexCommand cite
 key "pire2015"
@@ -304,7 +303,7 @@ Por último, para demostrar la utilidad del sistema propuesto, la salida
 
 \begin_layout Standard
 \begin_inset Note Note
-status open
+status collapsed
 
 \begin_layout Plain Layout
 * Utilizar información de apariencia para la fusión.
