--- a/solucion.lyx
+++ b/solucion.lyx
@@ -151,7 +151,7 @@ Stereo Parallel Tracking and Mapping
  Utilizando una cámara estéreo como sensor principal, construye y mantiene
  un mapa disperso del entorno para obtener una localización precisa de la
  cámara.
- S-PTAM sigue el enfoque propuesto en 
+ S-PTAM sigue el enfoque propuesto en PTAM 
 \begin_inset CommandInset citation
 LatexCommand cite
 key "Klein:Murray:ISMAR07"
@@ -162,16 +162,6 @@ key "Klein:Murray:ISMAR07"
 \emph on
 Parallel Tracking and Mapping
 \emph default
-
-\begin_inset Foot
-status open
-
-\begin_layout Plain Layout
-Localización y Mapeo Paralelos
-\end_layout
-
-\end_inset
-
 ) que divide las tareas de localización y mapeo en dos hilos de ejecución
  diferentes —localización, y construcción del mapa (
 \emph on
