tesis: Fix typo
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/tesis.lyx
+++ b/tesis.lyx
@@ -231,7 +231,7 @@ Simultaneous Localization and Mapping
 \begin_layout Standard
 Un mayor nivel de detalle del entorno (mapa) resultará en una posible mejora
  en los algoritmos de navegación del robot, permitiéndole esquivar obstáculos
- con una precisión mayor, obteniendo trayectorias más seguras y optimas.
+ con una precisión mayor, obteniendo trayectorias más seguras y óptimas.
 \end_layout
 
 \begin_layout Standard
