tesis: Add Agradecimientos
Signed-off-by: Ariel D'Alessandro <ariel@vanguardiasur.com.ar>

--- a/tesis.lyx
+++ b/tesis.lyx
@@ -266,6 +266,69 @@ System).
 
 \end_layout
 
+\begin_layout Section*
+Agradecimientos
+\end_layout
+
+\begin_layout Standard
+Quiero agradecer...
+\end_layout
+
+\begin_layout Standard
+en primer lugar a mis directores, Taihú Pire y Rodrigo Baravalle, por la
+ paciencia y el tiempo que dedicaron a lo largo de esta tesina.
+\end_layout
+
+\begin_layout Standard
+a Javier Civera, por sus sugerencias y colaboración en el presente trabajo.
+\end_layout
+
+\begin_layout Standard
+a los jurados, Pablo Pilotti y Juan Carlos Gómez, por la rápida evaluación.
+\end_layout
+
+\begin_layout Standard
+a todos los profesores que forman parte de la LCC, por las ganas y gran
+ dedicación que ponen en la carrera.
+\end_layout
+
+\begin_layout Standard
+a la FCEIA y UNR en general, por haber sido y ser un hermoso espacio para
+ estudiar y desarrollarse.
+\end_layout
+
+\begin_layout Standard
+con sinceridad, al pueblo argentino por defender y sostener la educación
+ pública, siempre!
+\end_layout
+
+\begin_layout Standard
+a los/as amigos/as y compañeros/as que hice en este extenso pasaje universitario....
+\end_layout
+
+\begin_layout Standard
+a Vir, mi compañera de vida todos estos años, quien me bancó incondicionalmente
+ y brindó el amor y los ánimos necesarios para que finalmente llegue este
+ día.
+\end_layout
+
+\begin_layout Standard
+a mi Mamá Liliana, mi Papá Roberto y mi hermana Daniela, por ayudarme a
+ estudiar y apoyarme constantemente, con paciencia, hasta el final.
+\end_layout
+
+\begin_layout Standard
+una vez más, a mi Viejo...
+ porque me encantaría poder estar compartiendo esto con vos...
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage cleardoublepage
+\end_inset
+
+
+\end_layout
+
 \begin_layout Standard
 \begin_inset CommandInset toc
 LatexCommand tableofcontents
