--- a/tesis.lyx
+++ b/tesis.lyx
@@ -303,7 +303,11 @@ con sinceridad, al pueblo argentino por defender y sostener la educación
 \end_layout
 
 \begin_layout Standard
-a los/as amigos/as y compañeros/as que hice en este extenso pasaje universitario....
+a los/as amigos/as y compañeros/as que hice en este extenso pasaje universitario...
+\end_layout
+
+\begin_layout Standard
+al café, al mate y al negro Dolina, porque tantas noches de desvelo.
 \end_layout
 
 \begin_layout Standard
